test/generics/errors/arity_mismatch_error.hy
// Expect generic arity mismatch diagnostic
class Box<T>
{
    Box()
    {
    }
}

class Uses
{
    Box<int, string> invalidField
}

void main()
{
}